Fix apm-server's SSL

--- a/apm-server/apm-server.yaml
+++ b/apm-server/apm-server.yaml
@@ -8,13 +8,21 @@ apmConfig:
     queue: {}
 
     output.elasticsearch:
-      hosts: ["http://elasticsearch-master:9200"]
+      hosts: ["elasticsearch-master:9200"]
       username: "${ELASTICSEARCH_USERNAME}"
       password: "${ELASTICSEARCH_PASSWORD}"
+      protocol: https
+
       ## If SSL is enabled
-      # protocol: https
-      # ssl.certificate_authorities:
+      ssl.certificate_authorities: ["/usr/share/apm-server/config/certs/ca.crt"]
+      ssl.certificate: "/usr/share/apm-server/config/certs/tls.crt"
+      ssl.key: "/usr/share/apm-server/config/certs/tls.key"
       #  - /usr/share/apm-server/config/certs/elastic-ca.pem
+
+secretMounts:
+  - name: elasticsearch-master-certs
+    secretName: elasticsearch-master-certs
+    path: /usr/share/apm-server/config/certs
 
 replicas: 1
 
@@ -50,12 +58,12 @@ envFrom: []
 # - configMapRef:
 #     name: config-map
 
-extraVolumeMounts: []
+# extraVolumeMounts: []
 # - name: extras
 #   mountPath: /usr/share/extras
 #   readOnly: true
 
-extraVolumes: []
+# extraVolumes: []
 # - name: extras
 #   emptyDir: {}
 
@@ -124,7 +132,7 @@ serviceAccountAnnotations: {}
 # eks.amazonaws.com/role-arn: arn:aws:iam::111111111111:role/k8s.clustername.namespace.serviceaccount
 
 # A list of secrets and their paths to mount inside the pod
-secretMounts: []
+# secretMounts: []
 #  - name: elastic-certificate-pem
 #    secretName: elastic-certificates
 #    path: /usr/share/apm-server/config/certs
