Logstash can log now

--- a/logstash/logstash.yaml
+++ b/logstash/logstash.yaml
@@ -1,29 +1,47 @@
 ---
 replicas: 1
 
+# A list of secrets and their paths to mount inside the pod
+secretMounts:
+  - name: elasticsearch-master-certs
+    secretName: elasticsearch-master-certs
+    path: /usr/share/logstash/config/certs
+
 # Allows you to add any config files in /usr/share/logstash/config/
 # such as logstash.yml and log4j2.properties
 #
 # Note that when overriding logstash.yml, `http.host: 0.0.0.0` should always be included
 # to make default probes work.
-logstashConfig: {}
-#  logstash.yml: |
-#    key:
-#      nestedkey: value
-#  log4j2.properties: |
-#    key = value
+logstashConfig:
+ logstash.yml: |
+  xpack.monitoring.enabled: true
+  xpack.monitoring.elasticsearch.hosts: ["https://elasticsearch-master:9200"]
+  xpack.monitoring.elasticsearch.username: "${ELASTICSEARCH_USERNAME}"
+  xpack.monitoring.elasticsearch.password: "${ELASTICSEARCH_PASSWORD}"
+  xpack.monitoring.elasticsearch.ssl.certificate_authority: "/usr/share/logstash/config/certs/ca.crt"
+  http.host: "0.0.0.0"
 
 # Allows you to add any pipeline files in /usr/share/logstash/pipeline/
 ### ***warn*** there is a hardcoded logstash.conf in the image, override it first
-logstashPipeline: {}
-#  logstash.conf: |
-#    input {
-#      exec {
-#        command => "uptime"
-#        interval => 30
-#      }
-#    }
-#    output { stdout { } }
+logstashPipeline:
+  logstash.conf: |
+    input {
+      beats {
+        port => 5044
+      }
+    }
+
+    output {
+      elasticsearch {
+        hosts => ["https://elasticsearch-master:9200"]
+        index => "beats-%{+YYYY.MM.dd}"
+        user => "${ELASTICSEARCH_USERNAME}"
+        password => "${ELASTICSEARCH_PASSWORD}"
+        ssl => true
+        cacert => "/usr/share/logstash/config/certs/ca.crt"
+      }
+    }
+
 
 # Allows you to add any pattern files in your custom pattern dir
 logstashPatternDir: "/usr/share/logstash/patterns/"
@@ -34,14 +52,20 @@ logstashPattern: {}
 # Extra environment variables to append to this nodeGroup
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
 # syntax here
-extraEnvs: []
-#  - name: MY_ENVIRONMENT_VAR
-#    value: the_value_goes_here
+extraEnvs:
+  - name: "ELASTICSEARCH_USERNAME"
+    valueFrom:
+      secretKeyRef:
+        name: elasticsearch-master-credentials
+        key: username
+  - name: "ELASTICSEARCH_PASSWORD"
+    valueFrom:
+      secretKeyRef:
+        name: elasticsearch-master-credentials
+        key: password
 
 # Allows you to load environment variables from kubernetes secret or config map
 envFrom: []
-# - secretRef:
-#     name: env-secret
 # - configMapRef:
 #     name: config-map
 
@@ -60,9 +84,6 @@ secrets: []
 #        LS0tLS1CRUdJT0K
 #      cert.crt: "LS0tLS1CRUdJTiBlRJRklDQVRFLS0tLS0K"
 #      cert.key.filepath: "secrets.crt" # The path to file should be relative to the `values.yaml` file.
-
-# A list of secrets and their paths to mount inside the pod
-secretMounts: []
 
 hostAliases: []
 #- ip: "127.0.0.1"
@@ -270,10 +291,10 @@ service:
       port: 5044
       protocol: TCP
       targetPort: 5044
-    - name: http
-      port: 8080
-      protocol: TCP
-      targetPort: 8080
+    # - name: http
+    #   port: 8080
+    #   protocol: TCP
+    #   targetPort: 8080
 
 ingress:
   enabled: false
