Ddos detection works fine now

--- a/elastalert2/elastalert-rules-secret.yaml
+++ b/elastalert2/elastalert-rules-secret.yaml
@@ -4,17 +4,20 @@ metadata:
  name: elastalert-rules-secret
 type: Opaque
 stringData:
-  gmail: |-
-    type: frequency
-    index: test-email-*
-    num_events: 1
-    timeframe:
-      minutes: 5
-    filter:
-    - query:
-        query_string:
-          query: "error"
+  ddos: |-
+    name: "DDoS Attack Detection"
+    type: metric_aggregation
+    index: beats-*
+    metric_agg_key: "message.keyword"
+    metric_agg_type: value_count
+    bucket_interval:
+      minutes: 1
+    query_key: "message.keyword"
+    min_threshold: 400
     alert:
-    - "email"
+      - "email"
     email:
-    - fuyosuruclone@gmail.com
+      - "fuyosuruclone@example.com" 
+    realert:
+      minutes: 1
+    timestamp_field: "@timestamp"
